--- a/index.html
+++ b/index.html
@@ -1,1 +1,173 @@
-<h1>Hola</h1>
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Mi página HTML</title>
+  <meta name="description" content="Plantilla HTML sencilla y responsive" />
+
+  <style>
+    /* Reset sencillo */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; line-height: 1.5; color: #222; background: #f7f7f9; padding: 24px; }
+
+    /* Contenedor */
+    .container { max-width: 980px; margin: 0 auto; background: #fff; border-radius: 12px; padding: 24px; box-shadow: 0 6px 20px rgba(10,10,20,0.06); }
+
+    header { display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:20px; }
+    header h1 { font-size: 1.25rem; }
+    nav { display:flex; gap:8px; }
+    nav a { text-decoration:none; padding:6px 10px; border-radius:8px; color:#333; font-weight:600; }
+    nav a:hover { background:#f0f0f3; }
+
+    main { display:grid; grid-template-columns: 1fr 320px; gap:20px; }
+    @media (max-width:820px) { main { grid-template-columns: 1fr; } }
+
+    .card { background:#fff; border:1px solid #eee; padding:16px; border-radius:10px; }
+    .hero { padding:18px; border-radius:10px; background:linear-gradient(180deg,#eef7ff,#ffffff); }
+    .buttons { margin-top:10px; display:flex; gap:8px; }
+
+    footer { text-align:center; margin-top:20px; color:#666; font-size:0.9rem; }
+
+    /* Form simple */
+    form label { display:block; margin-top:10px; font-size:0.95rem; }
+    input[type="text"], input[type="email"], textarea { width:100%; padding:8px 10px; margin-top:6px; border-radius:8px; border:1px solid #ddd; }
+    button.primary { background:#0b76ff; color:#fff; border:none; padding:8px 12px; border-radius:8px; cursor:pointer; }
+    button.ghost { background:transparent; border:1px solid #ddd; padding:8px 12px; border-radius:8px; cursor:pointer; }
+
+    /* pequeño helper */
+    .small { font-size:0.9rem; color:#555; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Mi página — Plantilla</h1>
+      <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#contacto">Contacto</a>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <article class="hero card">
+          <h2 id="inicio">Bienvenido</h2>
+          <p class="small">Esta es una plantilla HTML minimalista con estilos integrados y JavaScript básico. Úsala como punto de partida.</p>
+
+          <div class="buttons">
+            <button class="primary" id="saludarBtn">Saludar</button>
+            <button class="ghost" id="toggleThemeBtn">Modo oscuro</button>
+          </div>
+        </article>
+
+        <section class="card" id="servicios" style="margin-top:16px;">
+          <h3>Servicios</h3>
+          <ul>
+            <li>Servicio A — descripción corta.</li>
+            <li>Servicio B — descripción corta.</li>
+            <li>Servicio C — descripción corta.</li>
+          </ul>
+        </section>
+
+        <section class="card" id="contacto" style="margin-top:16px;">
+          <h3>Contacto</h3>
+          <form id="contactForm" onsubmit="return false;">
+            <label for="name">Nombre</label>
+            <input type="text" id="name" placeholder="Tu nombre" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="email@ejemplo.com" required>
+
+            <label for="message">Mensaje</label>
+            <textarea id="message" rows="5" placeholder="Escribe tu mensaje..."></textarea>
+
+            <div style="margin-top:12px;">
+              <button class="primary" id="sendBtn">Enviar</button>
+            </div>
+            <p id="formFeedback" class="small" style="margin-top:8px;"></p>
+          </form>
+        </section>
+      </section>
+
+      <aside>
+        <div class="card">
+          <h4>Resumen rápido</h4>
+          <p class="small">Aquí puedes añadir información adicional: enlaces, horarios, promociones, o widgets.</p>
+        </div>
+
+        <div class="card" style="margin-top:12px;">
+          <h4>Hora actual</h4>
+          <p id="clock" class="small">--:--:--</p>
+        </div>
+      </aside>
+    </main>
+
+    <footer>
+      <small>© <span id="year"></span> — Hecho con ❤️</small>
+    </footer>
+  </div>
+
+  <script>
+    // fecha actual en el footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // reloj simple
+    function updateClock() {
+      const el = document.getElementById('clock');
+      const now = new Date();
+      const h = String(now.getHours()).padStart(2,'0');
+      const m = String(now.getMinutes()).padStart(2,'0');
+      const s = String(now.getSeconds()).padStart(2,'0');
+      el.textContent = `${h}:${m}:${s}`;
+    }
+    setInterval(updateClock, 1000);
+    updateClock();
+
+    // botón saludar
+    document.getElementById('saludarBtn').addEventListener('click', () => {
+      alert('¡Hola! Gracias por visitar la página.');
+    });
+
+    // enviar formulario (simulado)
+    document.getElementById('sendBtn').addEventListener('click', () => {
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const msg = document.getElementById('message').value.trim();
+      const feedback = document.getElementById('formFeedback');
+
+      if (!name || !email) {
+        feedback.textContent = 'Por favor completa nombre y email.';
+        feedback.style.color = 'crimson';
+        return;
+      }
+
+      // aquí normalmente enviarías por fetch/AJAX al servidor
+      feedback.textContent = `Gracias ${name}, tu mensaje ha sido recibido (simulado).`;
+      feedback.style.color = 'green';
+
+      // limpiar campos si quieres
+      // document.getElementById('contactForm').reset();
+    });
+
+    // toggle "modo oscuro" muy simple
+    const toggleBtn = document.getElementById('toggleThemeBtn');
+    let dark = false;
+    toggleBtn.addEventListener('click', () => {
+      dark = !dark;
+      if (dark) {
+        document.documentElement.style.background = '#111';
+        document.body.style.background = '#0f0f12';
+        document.querySelectorAll('.card').forEach(c => c.style.background = '#0f1113');
+        toggleBtn.textContent = 'Modo claro';
+      } else {
+        document.documentElement.style.background = '';
+        document.body.style.background = '#f7f7f9';
+        document.querySelectorAll('.card').forEach(c => c.style.background = '#fff');
+        toggleBtn.textContent = 'Modo oscuro';
+      }
+    });
+  </script>
+</body>
+</html>
